# maths_static_compiler

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  args_8cc.html  classProgram.html  classUnknownLiteralException.html  classbackend_1_1control__flow__builder.html  classbackend_1_1executor.html  classbackend_1_1expression.html  classcontrol__flow__error.html  classfrontend_1_1Lexer.html  classfrontend_1_1binary__expression.html  classfrontend_1_1expression.html  classfrontend_1_1grouping__expression.html  classfrontend_1_1lexer.html  classfrontend_1_1number__expression.html  classfrontend_1_1parser.html  classfrontend_1_1unary__expression.html  classfrontend_1_1variable__expression.html  classparse__exception.html  classprogram.html  classunknown__literal__error.html  classunknown__literal__exception.html  conanfile.py  control__flow__builder_8cc.html  control__flow__builder_8h.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_50ce038c7f6e62c3c6f54f4758e7ced9.html  dir_5f08e79d74d1ffa84b469f2dc8c33e88.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_e333a79544d07838be1816d6de38a7b7.html  dir_ef3b2545113449f8f25e623a543d64e3.html  dir_ef7df1fa36d382fb267f3982db7163f7.html  (+29 more)
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml  static.yml
cmake/: dev-mode.cmake  docs-ci.cmake  docs.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  variables.cmake
docs/: Doxyfile.in  conf.py.in
source/: args.cc  exceptions.h  lib.cpp  main.cc  main.cpp  vars.h
source/backend/: control_flow_builder.cc  control_flow_builder.h  executor.h
source/frontend/: exceptions.h
source/frontend/parsing/: exceptions.h  expression.cc  expression.h  parser.h
source/frontend/scanning/: exceptions.h  lexer.cc  lexer.h  token.h
test/: CMakeLists.txt
test/source/: lexer_test.cc  maths_static_compiler_test.cpp  parser_test.cc
